# ecdb

./: .gitignore  create.sh  customer.surql  group.surql  index.html  order.surql  params.surql  product.surql  querries.surql  review.surql  supplier.surql  thinkin.txt  users.surql  vendor.surql
data/: customers.surql  products.surql  suppliers.surql  users.surql
ecdb_leptos/: Cargo.toml
ecdb_leptos/src/: main.rs
ecdb_rs/: .env.dev.pub  Cargo.toml
ecdb_rs/src/: config.rs  lib.rs  main.rs  router.rs  services.rs  state.rs
ecdb_rs/src/api/: check.rs
ecdb_rs/src/db/: connection.rs
leptos_rs/: Cargo.toml
rs/: .env.dev.pub  Cargo.toml
rs/src/: main.rs  router.rs  services.rs
rs/src/api/: check.rs
