[package]
name = "ecdb"
version = "0.1.0"
edition = "2024"

[lib]
name = "ecdb"
path = "src/lib.rs"

[[bin]]
name = "ecdb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.149"
surreal = "0.4.1"
surrealdb = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
